--- a/public/create_account.html
+++ b/public/create_account.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="stylesheets/kament.css" />
     <script src="jquery-3.3.1.min.js"></script>
 <!--    <script type="text/javascript">
     $(document).ready(function(){
