' Made the input boxes comply with database length'

--- a/public/create_account.html
+++ b/public/create_account.html
@@ -52,9 +52,9 @@
     <h1>Create your account!</h1>
     <table>
         <tr><td>Username:</td><td>
-        <input type="text" id="username" required />
+        <input type="text" id="username" maxlength="64" required />
         </td></tr><tr><td>Password:</td><td>
-        <input type="password" id="password" required />
+        <input type="password" id="password" maxlength="64" required />
         </td></tr><tr><td>Retype password:</td><td>
         <input type="password" id="verifyPassword" required />
         </td></tr><tr><td></td><td>
