Changed pretend this is a good message

--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
         <button type="submit">Log in!</button>
     </form> <br />
     <h3>
-        Alternatively, you may create an account
+        You must create an account.
         <a href="/create_account.html">here</a>.
     </h3>
 </body>
